--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ border-radius: 6px;
   dispaly: inline-block;
   margin-top: 20px;
   font-size: 15px;
+  margin-bottom: 3rem;
   
 }
 .lesson-wrapper .heading-p p {
