--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ li {
   background: #F2994A;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #F2C94C, #F2994A);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #F2C94C, #F2994A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
-  padding: 11px 20px;
+  padding: 11px 30px;
   text-decoration: none;
   color: white;
   font-weight: bold;
@@ -207,7 +207,7 @@ border-radius: 6px;
 }
 .txt-content {
   width: 80%;
-  dispaly: inline-block;
+  display: inline-block;
   margin-top: 20px;
   font-size: 15px;
   margin-bottom: 3rem;
